# VCC3200L

./: .gitignore  CMakeLists.txt  README.md
inc/: config.h  i2c_if.h  oled.h  pin.h  spi.h  vcc3200.h
src/: gpio.c  gpio_if.c  i2c_if.c  interrupt.c  pin.c  prcm.c  spi.c  uart.c  utils.c  vcc3200.c
src.orig/: gpio.c  interrupt.c  pin.c  prcm.c  spi.c  uart.c
